force-app/main/default/objects/Service_Provider__c/Service_Provider__c.object-meta.xml
<CustomObject>
    <label>Service Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>