force-app/main/default/objects/Service_Provider__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Providers</relationshipLabel>
    <relationshipName>Service_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>