force-app/main/default/objects/Service_Provider__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <label>Notes/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>