force-app/main/default/objects/Service_Provider__c/fields/Provider_Rating__c.field-meta.xml
<CustomField>
    <fullName>Provider_Rating__c</fullName>
    <label>Provider Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Star</fullName>
            </value>
            <value>
                <fullName>2 Stars</fullName>
            </value>
            <value>
                <fullName>3 Stars</fullName>
            </value>
            <value>
                <fullName>4 Stars</fullName>
            </value>
            <value>
                <fullName>5 Stars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>