force-app/main/default/objects/Service_Provider__c/fields/Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service__c</fullName>
    <label>Type of Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Social Services</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Family Support</fullName>
            </value>
            <value>
                <fullName>Substance Abuse Treatment</fullName>
            </value>
            <value>
                <fullName>Housing Assistance</fullName>
            </value>
            <value>
                <fullName>Child Care Services</fullName>
            </value>
            <value>
                <fullName>Legal Assistance</fullName>
            </value>
            <value>
                <fullName>Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>Job Training and Employment Services</fullName>
            </value>
            <value>
                <fullName>Nutrition Assistance</fullName>
            </value>
            <value>
                <fullName>Community Outreach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>